@@ -81,11 +81,11 @@ $(LIB)(dis_tables.o): ../driver/dis_tables.c $(H)
 	-rm -f dis_tables.o
 
 dt_errtags.c: dt_errtags.h mkerrtags.sh
-	./mkerrtags.sh <dt_errtags.h > dt_errtags.c
+	./mkerrtags.sh <dt_errtags.h | sed -e 's/\\n/\n/g' > dt_errtags.c
 
 dt_names.c: mknames.sh
 	./mknames.sh <../uts/common/sys/dtrace.h | sed -e 's/\\n/\n/g' > dt_names.c
 
 clean:
-	 -rm -f dt_grammar.h dt_lex.c dt_errtags.c dt_names.c *.o *.a	
+	 -rm -f dt_grammar.h dt_lex.c dt_errtags.c dt_names.c *.o $(LIB)	
 	
