@@ -7,7 +7,7 @@ CPPFLAGS += -I../libproc/common \
         -I../uts/common \
         -I. \
         -DCTF_OLD_VERSIONS $(PTR32)
-CPPFLAGS += -D_LARGEFILE_SOURCE=1 -D_FILE_OFFSET_BITS=64 -D_LONGLONG_TYPE
+CPPFLAGS += -D_LARGEFILE64_SOURCE=1 -D_FILE_OFFSET_BITS=64 -D_LONGLONG_TYPE
 
 BINDIR=../build-2.6.18-128.1.14.0.1.el5/
 
